# pytest-snapshot

./: .coveragerc  .gitignore  .travis.yml  MANIFEST.in  README.rst  appveyor.yml  mkdocs.yml  pyproject.toml  pytest_snapshot.py  setup.cfg  setup.py  tox.ini
.github/workflows/: CI.yml  pythonpublish.yml
docs/: index.md
pytest_snapshot/: _utils.py  plugin.py
tests/: test_assert_match.py  test_assert_match_dir.py  test_misc.py  test_snapshot.py  utils.py
