[metadata]
name = pytest-snapshot
author = Joseph Roitman
author_email = joseph.roitman@gmail.com
maintainer = Joseph Roitman
maintainer_email = joseph.roitman@gmail.com
license = MIT
description = A plugin for snapshot testing with pytest.
url = https://github.com/joseph-roitman/pytest-snapshot
long_description = file: README.rst
classifiers =
    Development Status :: 4 - Beta
    Framework :: Pytest
    Intended Audience :: Developers
    Topic :: Software Development :: Testing
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy
    Operating System :: OS Independent
    License :: OSI Approved :: MIT License

[options]
packages = pytest_snapshot
zip_safe = False
include_package_data = True
python_requires = >=3.5
install_requires =
    pytest >= 3.0.0

[options.entry_points]
pytest11 = snapshot = pytest_snapshot.plugin
